compiler/actonc/test/syntaxerrors/err39.act
# Invalid attribute access
def bad_attr():
    return obj.